--- a/Dockerfile-tools
+++ b/Dockerfile-tools
@@ -1,9 +1,9 @@
-FROM swift:5.0.2
+FROM ibmcom/swift-ubuntu:5.0.1
 LABEL maintainer="IBM Swift Engineering at IBM Cloud"
-LABEL Description="Template Dockerfile that extends the swift image."
+LABEL Description="Template Dockerfile that extends the ibmcom/swift-ubuntu image."
 
 # We can replace this port with what the user wants
-EXPOSE 8080 1024 1025
+EXPOSE 8083 1024 1025
 
 # Default user if not provided
 ARG bx_dev_user=root
@@ -11,9 +11,6 @@ ARG bx_dev_userid=1000
 
 # Install system level packages
 # RUN apt-get update && apt-get dist-upgrade -y
-
-# Include base Kitura dependencies
-RUN apt-get update && apt-get install -y sudo libssl-dev libcurl4-openssl-dev
 
 # Add utils files
 ADD https://raw.githubusercontent.com/IBM-Swift/swift-ubuntu-docker/master/utils/tools-utils.sh /swift-utils/tools-utils.sh
